Add protobuf_ethernet/uart fix app dependencies.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Twister Tests
         working-directory: example-application
         run: |
-          ../zephyr/scripts/twister -G --board-root boards/ --testsuite-root ./tests/
+          west test
 
       - name: Archive firmware
         uses: actions/upload-artifact@v2
