--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,6 +6,10 @@
 
 cmake_minimum_required(VERSION 3.13.1)
 
+if (NOT DEFINED BOARD)
+  set(BOARD "native_posix_64")
+endif()
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(app LANGUAGES C VERSION 0.0.1)
@@ -14,6 +18,3 @@ configure_file(app_version.h.in ${CMAKE_BINARY_DIR}/app/include/app_version.h)
 target_include_directories(app PRIVATE ${CMAKE_BINARY_DIR}/app/include src)
 
 target_sources(app PRIVATE src/main.c)
-
-add_dependencies(app synapse_pb)
-add_dependencies(app synapse_zbus)
