--- a/lib/protobuf_ethernet/prj.conf
+++ b/lib/protobuf_ethernet/prj.conf
@@ -1,12 +1,9 @@
+CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
 CONFIG_TINYFRAME=n
-
-CONFIG_SYNAPSE_PB=y
-CONFIG_PROTOBUF_ETHERNET=y
-CONFIG_PROTOBUF_UART=y
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
@@ -21,6 +18,9 @@ CONFIG_NET_IPV6=n
 CONFIG_NET_TCP=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
+
+# Network driver config
+CONFIG_TEST_RANDOM_GENERATOR=y
 
 # Network address config
 CONFIG_NET_CONFIG_SETTINGS=y
