--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,11 +2,9 @@ CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
-CONFIG_TINYFRAME=n
+CONFIG_TINYFRAME=y
 
 CONFIG_SYNAPSE_PB=y
-CONFIG_PROTOBUF_ETHERNET=y
-CONFIG_PROTOBUF_UART=y
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
