--- a/modules/tinyframe/CMakeLists.txt
+++ b/modules/tinyframe/CMakeLists.txt
@@ -2,11 +2,11 @@ if (CONFIG_TINYFRAME)
 
 set(TINYFRAME_DIR ${ZEPHYR_CURRENT_MODULE_DIR})
 
-zephyr_library()
+zephyr_library_named(tinyframe)
 
 zephyr_include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}
-  ${TINYFRAME_DIR}
+  ${TINYFRAME_DIR}/..
   )
 
 zephyr_library_sources(
