--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,9 +2,8 @@ CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
-CONFIG_TINYFRAME=y
-
-CONFIG_SYNAPSE_PB=y
+CONFIG_SYNAPSE_TINYFRAME=y
+CONFIG_SYNAPSE_PROTOBUF=y
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
