--- a/zephyr/module.yml
+++ b/zephyr/module.yml
@@ -18,7 +18,8 @@ build:
     # `<dts_root>/dts/bindings` for additional dts binding files. The `.` is
     # the root of this repository.
     dts_root: .
-    module_ext_root: .
+    #module_ext_root: .
   depends:
     - nanopb
-    - tinyframe
+    - synapse_tinyframe
+    - synapse_protobuf
