--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,6 +2,9 @@ CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
+CONFIG_SYNAPTIC_GAP=y
+CONFIG_SYNAPTIC_GAP_UART=n
+CONFIG_SYNAPTIC_GAP_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 
