Rename to synapse_zbus.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -4,9 +4,9 @@ CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
 
 CONFIG_ZBUS=y
-CONFIG_SYNAPTIC_GAP=y
-CONFIG_SYNAPTIC_GAP_UART=n
-CONFIG_SYNAPTIC_GAP_ETHERNET=y
+CONFIG_SYNAPSE_ZBUS=y
+CONFIG_SYNAPSE_ZBUS_UART=n
+CONFIG_SYNAPSE_ZBUS_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 
