--- a/lib/synapse_zbus/CMakeLists.txt
+++ b/lib/synapse_zbus/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(synaptic_gap)
+zephyr_library_named(synapse_zbus)
 
 
 # we need to be able to include generated header files
@@ -12,4 +12,4 @@ zephyr_library_sources(
   channels.c
   )
 
-add_dependencies(synaptic_gap synapse_protobuf)
+add_dependencies(synapse_zbus synapse_protobuf)
