--- a/lib/synapse_zbus/Kconfig
+++ b/lib/synapse_zbus/Kconfig
@@ -1,21 +1,21 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-config SYNAPTIC_GAP
-  bool "synapse gap"
+config SYNAPSE_ZBUS
+  bool "synapse zbus interface"
   help
-    This option enables the synaptic gap that communicates with ROS
+    This option enables the synapse zbus interface
 
-if SYNAPTIC_GAP
+if SYNAPSE_ZBUS
 
-config SYNAPTIC_GAP_UART
+config SYNAPSE_ZBUS_UART
   bool "synapse protobuf uart thread"
   help
     This option enables the synapse protobuf uart thread
 
-config SYNAPTIC_GAP_ETHERNET
+config SYNAPSE_ZBUS_ETHERNET
   bool "synapse protobuf ethernet thread"
   help
     This option enables the synapse protobuf ethernet thread
 
-endif  # SYNAPTIC_GAP
+endif  # SYNAPSE_ZBUS
