--- a/scripts/west-commands.yml
+++ b/scripts/west-commands.yml
@@ -9,3 +9,8 @@ west-commands:
       - name: format
         class: FormatCommand
         help: runs code formatting
+  - file: scripts/tidy_command.py
+    commands:
+      - name: tidy
+        class: TidyCommand
+        help: runs clang tidy
