--- a/app/boards/native_posix_64.conf
+++ b/app/boards/native_posix_64.conf
@@ -2,3 +2,5 @@ CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
+
+CONFIG_CEREBRI_SIM=y
