--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,3 +2,4 @@
 
 add_subdirectory_ifdef(CONFIG_CUSTOM_LIB custom_lib)
 add_subdirectory_ifdef(CONFIG_SYNAPSE_ZBUS synapse_zbus)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SIM cerebri_sim)
