Add native tcp thread for sim.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -17,4 +17,8 @@ project(app LANGUAGES C VERSION 0.0.1)
 configure_file(app_version.h.in ${CMAKE_BINARY_DIR}/app/include/app_version.h)
 target_include_directories(app PRIVATE ${CMAKE_BINARY_DIR}/app/include src)
 
-target_sources(app PRIVATE src/main.c)
+set(SOURCE_FILES
+  src/main.c
+  )
+
+target_sources(app PRIVATE ${SOURCE_FILES})
