--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,8 +14,11 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(app LANGUAGES C VERSION 0.0.1)
 
+target_compile_options(app PRIVATE -Wall -Wextra -Werror)
+
 configure_file(app_version.h.in ${CMAKE_BINARY_DIR}/app/include/app_version.h)
 target_include_directories(app PRIVATE ${CMAKE_BINARY_DIR}/app/include src)
+
 
 set(SOURCE_FILES
   src/main.c
