Add rover control.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -9,6 +9,7 @@ CONFIG_SYNAPSE_ZBUS_UART=n
 CONFIG_SYNAPSE_ZBUS_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
+CONFIG_CONTROL_ROVER=y
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
