--- a/lib/synapse_zbus/CMakeLists.txt
+++ b/lib/synapse_zbus/CMakeLists.txt
@@ -8,7 +8,8 @@ zephyr_library_named(synapse_zbus)
 zephyr_include_directories()
 
 zephyr_library_sources(
-  main.c
+  #uart_main.c
+  ethernet_main.c
   channels.c
   )
 
