Add mimxrt1062_fmurt6 support.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/west.yml
+++ b/west.yml
@@ -11,9 +11,9 @@ manifest:
 
   projects:
     - name: zephyr
-      url: https://github.com/zephyrproject-rtos/zephyr
+      url: https://github.com/NXPHoverGames/Zephyr
       west-commands: scripts/west-commands.yml
-      revision: v3.3.0
+      revision: pr-mimxrt1062-fmurt6
       import: true
     - name: synapse_tinyframe
       url: https://github.com/CogniPilot/synapse_tinyframe
