--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,18 +2,19 @@ CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
+#CONFIG_HEAP_MEM_POOL_SIZE=102400
 
 CONFIG_ZBUS=y
 CONFIG_SYNAPSE_ZBUS=y
-CONFIG_SYNAPSE_ZBUS_UART=n
-CONFIG_SYNAPSE_ZBUS_ETHERNET=y
+CONFIG_SYNAPSE_ZBUS_UART=y
+CONFIG_SYNAPSE_ZBUS_ETHERNET=n
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_CONTROL_ROVER=y
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
-CONFIG_MAIN_STACK_SIZE=1200
+#CONFIG_MAIN_STACK_SIZE=102400
 
 CONFIG_NET_SHELL=y
 
