Update support for uart and ethernet.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/synapse_zbus/CMakeLists.txt
+++ b/lib/synapse_zbus/CMakeLists.txt
@@ -8,9 +8,8 @@ zephyr_library_named(synapse_zbus)
 zephyr_include_directories()
 
 zephyr_library_sources(
-  uart_irq_main.c
-#  uart_main.c
-#  ethernet_main.c
+  uart_main.c
+  ethernet_main.c
   channels.c
   )
 
