--- a/app/boards/native_posix_64.conf
+++ b/app/boards/native_posix_64.conf
@@ -3,4 +3,6 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
 
+CONFIG_UART_NATIVE_POSIX_PORT_1_ENABLE=y
+
 CONFIG_CEREBRI_SIM=y
