--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,9 +2,18 @@ CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
+CONFIG_LOG=y
+CONFIG_LOG_MODE_MINIMAL=y
+CONFIG_BOOT_BANNER=n
+CONFIG_MAIN_THREAD_PRIORITY=5
+
 #CONFIG_HEAP_MEM_POOL_SIZE=102400
 
 CONFIG_ZBUS=y
+CONFIG_ZBUS_LOG_LEVEL_INF=y
+CONFIG_ZBUS_CHANNEL_NAME=y
+CONFIG_ZBUS_OBSERVER_NAME=y
+
 CONFIG_SYNAPSE_ZBUS=y
 CONFIG_SYNAPSE_ZBUS_UART=y
 CONFIG_SYNAPSE_ZBUS_ETHERNET=y
