Add rover control back.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -20,6 +20,7 @@ CONFIG_SYNAPSE_ZBUS_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_CONTROL_ROVER=y
+CONFIG_CONTROL_ROVER_STEERING_DIFFERENTIAL=y
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
