Add kconfig for ackermann in prj.conf.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -21,6 +21,7 @@ CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_CONTROL_ROVER=y
 CONFIG_CONTROL_ROVER_STEERING_DIFFERENTIAL=y
+CONFIG_CONTROL_ROVER_STEERING_ACKERMANN=n
 
 # General config
 #CONFIG_NEWLIB_LIBC=y
