Modify ethernet interface.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -24,8 +24,9 @@ CONFIG_CONTROL_ROVER_STEERING_DIFFERENTIAL=y
 CONFIG_CONTROL_ROVER_STEERING_ACKERMANN=n
 
 # General config
-#CONFIG_NEWLIB_LIBC=y
-#CONFIG_MAIN_STACK_SIZE=102400
+CONFIG_POSIX_API=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_MAIN_STACK_SIZE=1024
 
 CONFIG_NET_SHELL=y
 
@@ -35,6 +36,7 @@ CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=n
 CONFIG_NET_TCP=y
 CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_POSIX_NAMES=y
 
 # Network address config
 CONFIG_NET_CONFIG_SETTINGS=y
