Add separate control apps for diffdrive and ackermann.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -6,6 +6,7 @@ menu "Libraries"
 rsource "custom_lib/Kconfig"
 rsource "synapse_zbus/Kconfig"
 rsource "cerebri_sim/Kconfig"
-rsource "control_rover/Kconfig"
+rsource "control_ackermann/Kconfig"
+rsource "control_diffdrive/Kconfig"
 
 endmenu
