--- a/lib/control_ackermann/CMakeLists.txt
+++ b/lib/control_ackermann/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(control_rover)
+zephyr_library_named(control_ackermann)
 
 
 # we need to be able to include generated header files
@@ -12,4 +12,4 @@ zephyr_library_sources(
   casadi/rover.c
   )
 
-add_dependencies(control_rover synapse_protobuf)
+add_dependencies(control_ackermann synapse_protobuf)
