Add actuator pwm app.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -22,8 +22,9 @@ CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_CONTROL_ACKERMANN=y
 
 # General config
-#CONFIG_NEWLIB_LIBC=y
-#CONFIG_MAIN_STACK_SIZE=102400
+CONFIG_POSIX_API=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_MAIN_STACK_SIZE=1024
 
 CONFIG_NET_SHELL=y
 
