--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory_ifdef(CONFIG_SYNAPSE_ZBUS synapse_zbus)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SIM cerebri_sim)
 add_subdirectory_ifdef(CONFIG_CONTROL_ACKERMANN control_ackermann)
 add_subdirectory_ifdef(CONFIG_CONTROL_DIFFDRIVE control_diffdrive)
+add_subdirectory_ifdef(CONFIG_ACTUATOR_PWM actuator_pwm)
