--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -7,19 +7,17 @@ CONFIG_LOG_MODE_MINIMAL=y
 CONFIG_BOOT_BANNER=n
 CONFIG_MAIN_THREAD_PRIORITY=5
 
-#CONFIG_HEAP_MEM_POOL_SIZE=102400
-
 CONFIG_ZBUS=y
 CONFIG_ZBUS_LOG_LEVEL_INF=y
 CONFIG_ZBUS_CHANNEL_NAME=y
 CONFIG_ZBUS_OBSERVER_NAME=y
 
-CONFIG_SYNAPSE_ZBUS=y
-CONFIG_SYNAPSE_ZBUS_UART=y
-CONFIG_SYNAPSE_ZBUS_ETHERNET=y
-CONFIG_SYNAPSE_TINYFRAME=y
-CONFIG_SYNAPSE_PROTOBUF=y
-CONFIG_CONTROL_ACKERMANN=y
+CONFIG_SYNAPSE_ZBUS=n
+CONFIG_SYNAPSE_ZBUS_UART=n
+CONFIG_SYNAPSE_ZBUS_ETHERNET=n
+CONFIG_SYNAPSE_TINYFRAME=n
+CONFIG_SYNAPSE_PROTOBUF=n
+CONFIG_CONTROL_ACKERMANN=n
 
 # General config
 CONFIG_POSIX_API=y
@@ -28,16 +26,21 @@ CONFIG_MAIN_STACK_SIZE=1024
 
 CONFIG_NET_SHELL=y
 
-# Networking config
-CONFIG_NETWORKING=y
-CONFIG_NET_IPV4=y
-CONFIG_NET_IPV6=n
-CONFIG_NET_TCP=y
-CONFIG_NET_SOCKETS=y
+#CONFIG_ETH_MCUX_RX_BUFFERS=16
+#CONFIG_ETH_MCUX_TX_BUFFERS=16
+#CONFIG_ETH_MCUX_USE_DTCM_FOR_DMA_BUFFER=y
 
-# Network address config
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_NEED_IPV4=y
-CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
-CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+
+# Networking config
+# CONFIG_NETWORKING=n
+# CONFIG_NET_IPV4=y
+# CONFIG_NET_IPV6=n
+# CONFIG_NET_TCP=y
+# CONFIG_NET_SOCKETS=y
+
+# # Network address config
+# CONFIG_NET_CONFIG_SETTINGS=y
+# CONFIG_NET_CONFIG_NEED_IPV4=y
+# CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
+# CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
