--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -12,12 +12,12 @@ CONFIG_ZBUS_LOG_LEVEL_INF=y
 CONFIG_ZBUS_CHANNEL_NAME=y
 CONFIG_ZBUS_OBSERVER_NAME=y
 
-CONFIG_SYNAPSE_ZBUS=n
-CONFIG_SYNAPSE_ZBUS_UART=n
-CONFIG_SYNAPSE_ZBUS_ETHERNET=n
-CONFIG_SYNAPSE_TINYFRAME=n
-CONFIG_SYNAPSE_PROTOBUF=n
-CONFIG_CONTROL_ACKERMANN=n
+CONFIG_SYNAPSE_ZBUS=y
+CONFIG_SYNAPSE_ZBUS_UART=y
+CONFIG_SYNAPSE_ZBUS_ETHERNET=y
+CONFIG_SYNAPSE_TINYFRAME=y
+CONFIG_SYNAPSE_PROTOBUF=y
+CONFIG_CONTROL_ACKERMANN=y
 
 # General config
 CONFIG_POSIX_API=y
@@ -32,15 +32,19 @@ CONFIG_NET_SHELL=y
 
 
 # Networking config
-# CONFIG_NETWORKING=n
-# CONFIG_NET_IPV4=y
-# CONFIG_NET_IPV6=n
-# CONFIG_NET_TCP=y
-# CONFIG_NET_SOCKETS=y
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=n
+CONFIG_NET_TCP=y
+CONFIG_NET_SOCKETS=y
 
 # # Network address config
-# CONFIG_NET_CONFIG_SETTINGS=y
-# CONFIG_NET_CONFIG_NEED_IPV4=y
-# CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
-# CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_STATISTICS=y
+CONFIG_NET_MGMT_EVENT_MONITOR=y
+CONFIG_NET_BUF_POOL_USAGE=y
+CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
+CONFIG_NET_CONFIG_NEED_IPV4=y
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
+CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
