Add more config options and update PWM.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -38,9 +38,10 @@ CONFIG_NET_IPV6=n
 CONFIG_NET_TCP=y
 CONFIG_NET_SOCKETS=y
 
-# # Network address config
+# Network address config
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_STATISTICS=y
+CONFIG_NET_MGMT_EVENT_INFO=y
 CONFIG_NET_MGMT_EVENT_MONITOR=y
 CONFIG_NET_BUF_POOL_USAGE=y
 CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
@@ -48,3 +49,9 @@ CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
+# STATS
+CONFIG_THREAD_RUNTIME_STATS=y
+CONFIG_SCHED_THREAD_USAGE=y
+CONFIG_SCHED_THREAD_USAGE_ANALYSIS=y
+CONFIG_SCHED_THREAD_USAGE_ALL=y
+CONFIG_SCHED_THREAD_USAGE_AUTO_ENABLE=y
