Update configs for mrbuggy3 and PWM.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -4,7 +4,7 @@ CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
 CONFIG_LOG=y
 CONFIG_LOG_MODE_MINIMAL=y
-CONFIG_BOOT_BANNER=n
+CONFIG_BOOT_BANNER=y
 CONFIG_MAIN_THREAD_PRIORITY=5
 
 CONFIG_ZBUS=y
@@ -23,6 +23,7 @@ CONFIG_CONTROL_ACKERMANN=y
 CONFIG_POSIX_API=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_MAIN_STACK_SIZE=1024
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 CONFIG_NET_SHELL=y
 
