--- a/Kconfig
+++ b/Kconfig
@@ -5,5 +5,12 @@
 # as the module Kconfig entry point (see zephyr/module.yml). You can browse
 # module options by going to Zephyr -> Modules in Kconfig.
 
+config CEREBRI_APP
+  string "cerebri app name"
+  help
+    This cerebri app name
+
+
 rsource "drivers/Kconfig"
 rsource "lib/Kconfig"
+
