Fix posix kconfig warnings, fix elm4 app name.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/elm4/boards/native_posix_64.conf
+++ b/app/elm4/boards/native_posix_64.conf
@@ -8,3 +8,7 @@ CONFIG_UART_NATIVE_POSIX_PORT_1_ENABLE=n
 CONFIG_CEREBRI_SIM=y
 CONFIG_SYNAPSE_ZBUS_ETHERNET=y
 CONFIG_SYNAPSE_ZBUS_UART=n
+
+CONFIG_NEWLIB_LIBC=n
+CONFIG_EXTERNAL_LIBC=y
+CONFIG_POSIX_API=n
