Add cpack support.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,15 @@ install(PROGRAMS ${CMAKE_BINARY_DIR}/zephyr/zephyr.bin
 install(PROGRAMS ${CMAKE_BINARY_DIR}/zephyr/zephyr.exe
 	DESTINATION bin
 	RENAME cerebri_${CONFIG_CEREBRI_APP}_${BOARD} OPTIONAL)
+
+
+set(CPACK_PACKAGE_NAME cerebri_${CONFIG_CEREBRI_APP})
+set(CPACK_GENERATOR "DEB;TGZ")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS)
+set(CPACK_SYSTEM_NAME "${BOARD}")
+set(CPACK_PACKAGE_VERSION_MAJOR "${CONFIG_CEREBRI_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${CONFIG_CEREBRI_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${CONFIG_CEREBRI_VERSION_PATCH}")
+set(CPACK_PACKAGE_CONTACT cogni@cognipilot.com)
+
+include(CPack)
