--- a/lib/control_ackermann/Kconfig
+++ b/lib/control_ackermann/Kconfig
@@ -5,3 +5,49 @@ config CONTROL_ACKERMANN
   bool "rover ackermann control lib"
   help
     This option enables the rover ackermamnn lib.
+
+if CONTROL_ACKERMANN
+
+config CONTROL_ACKERMANN_GAIN_HEADING
+  int "heading gain"
+  default 100
+  help
+    Steering = Heading error * GAIN_/ 1000
+
+config CONTROL_ACKERMANN_GAIN_CROSS_TRACK
+  int "cross track gain"
+  default 100
+  help
+    Steering = Cross track error * GAIN / 1000
+
+config CONTROL_ACKERMANN_GAIN_ALONG_TRACK
+  int "along track gain"
+  default 100
+  help
+    Steering = Along track error * GAIN / 1000
+
+config CONTROL_ACKERMANN_MAX_TURN_ANGLE_MRAD
+  int "max turn angle mrad"
+  default 400
+  help
+    Max turn angle in milli-radians
+
+config CONTROL_ACKERMANN_MAX_VELOCITY_MM_S
+  int "max velocity, mm/s"
+  default 22000
+  help
+    Max velocity in mm/s
+
+config CONTROL_ACKERMANN_WHEEL_RADIUS_MM
+  int "wheel radius, mm"
+  default 37
+  help
+    Wheel radius in mm
+
+config CONTROL_ACKERMANN_WHEEL_BASE_MM
+  int "wheel base, mm"
+  default 226
+  help
+    Wheel radius in mm
+
+endif  # CONTROL_ACKERMANN
