Add Initial VESC CAN KConfig.
Closes #34

Co-authored-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -9,5 +9,6 @@ rsource "cerebri_sim/Kconfig"
 rsource "control_ackermann/Kconfig"
 rsource "control_diffdrive/Kconfig"
 rsource "actuator_pwm/Kconfig"
+rsource "actuator_can_vesc/Kconfig"
 
 endmenu
