--- a/app/mrbuggy3/Kconfig
+++ b/app/mrbuggy3/Kconfig
@@ -5,9 +5,9 @@
 # options can be defined here or included via other application Kconfig files.
 # You can browse these options using the west targets menuconfig (terminal) or
 # guiconfig (GUI).
-menu "Cerebri"
+#menu "Cerebri"
 source "Kconfig.zephyr"
-endmenu
+#endmenu
 
 module = APP
 module-str = APP
