Implement PWM KConfig settings for actuator_pwm
Closes #19

Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
+++ b/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
@@ -1,5 +1,8 @@
 CONFIG_CEREBRI_SIM=n
-CONFIG_PWM_ACTUATOR=y
+CONFIG_ACTUATOR_PWM=y
+CONFIG_ACTUATOR_PWM_NUMBER=3
+CONFIG_ACTUATOR_PWM_LINEAR_0=y
+CONFIG_ACTUATOR_PWM_LINEAR_1=y
 CONFIG_PWM=y
 
 CONFIG_CAN=y
