Split VESC CAN into actuator and status.
Closes #39

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,4 +6,4 @@ add_subdirectory_ifdef(CONFIG_CEREBRI_SIM cerebri_sim)
 add_subdirectory_ifdef(CONFIG_CONTROL_ACKERMANN control_ackermann)
 add_subdirectory_ifdef(CONFIG_CONTROL_DIFFDRIVE control_diffdrive)
 add_subdirectory_ifdef(CONFIG_ACTUATOR_PWM actuator_pwm)
-add_subdirectory_ifdef(CONFIG_ACTUATOR_CAN_VESC actuator_can_vesc)
+add_subdirectory_ifdef(CONFIG_VESC_CAN vesc_can)
