--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -9,6 +9,6 @@ rsource "cerebri_sim/Kconfig"
 rsource "control_ackermann/Kconfig"
 rsource "control_diffdrive/Kconfig"
 rsource "actuator_pwm/Kconfig"
-rsource "actuator_can_vesc/Kconfig"
+rsource "vesc_can/Kconfig"
 
 endmenu
