--- a/lib/vesc_can/Kconfig
+++ b/lib/vesc_can/Kconfig
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 config VESC_CAN
-  bool "enable configuring VESC CAN"
+  bool "CAN based VESC"
   default n
   depends on CAN
   help
@@ -12,7 +12,7 @@ if VESC_CAN
 
 menu "VESC_CAN"
 
-config VESC_CAN_ACTUATOR
+config ACTUATOR_VESC_CAN
   bool "CAN VESC based actuators"
   default n
   depends on CAN
@@ -30,19 +30,35 @@ config VESC_ACTUATORS_NUMBER
   int "Number of VESC CAN actuators"
   default 1
   range 1 8
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Defines number of VESC CAN actuators 1-8
 
-if VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+if ACTUATOR_VESC_CAN || VESC_CAN_STATUS
 
 menu "VESC_CAN_0"
+
+config VESC_CAN_BUS_DEVICE_ALIAS_0
+  string "CAN bus device alias for VESC 0"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 0.
+
+config VESC_CAN_BUS_DEVICE_FD_0
+  bool "CAN bus is CANFD for VESC 0"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_0
 
 config VESC_POLE_PAIR_0
   int "Number of Pole Pairs of motor attached to VESC 0"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 0.
 
@@ -50,7 +66,7 @@ config VESC_CAN_ID_0
   int "ID of VESC 0"
   default 0
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 0.
 
@@ -58,7 +74,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_0
   int "Actuator velocity index for VESC 0"
   default 0
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 0.
 
@@ -70,6 +86,7 @@ config VESC_STATUS_BITMASK_0
   help
     bitmask for VESC CAN status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -79,11 +96,27 @@ if VESC_ACTUATORS_NUMBER > 1
 
 menu "VESC_CAN_1"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_1
+  string "CAN bus device alias for VESC 1"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 1.
+
+config VESC_CAN_BUS_DEVICE_FD_1
+  bool "CAN bus is CANFD for VESC 1"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_1
+
 config VESC_POLE_PAIR_1
   int "Number of Pole Pairs of motor attached to VESC 1"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 1.
 
@@ -91,7 +124,7 @@ config VESC_CAN_ID_1
   int "ID of VESC 1"
   default 1
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 1.
 
@@ -99,7 +132,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_1
   int "Actuator velocity index for VESC 1"
   default 1
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 1.
 
@@ -111,6 +144,7 @@ config VESC_STATUS_BITMASK_1
   help
     bitmask for VESC CAN 1 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -120,11 +154,27 @@ if VESC_ACTUATORS_NUMBER > 2
 
 menu "VESC_CAN_2"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_2
+  string "CAN bus device alias for VESC 2"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 2.
+
+config VESC_CAN_BUS_DEVICE_FD_2
+  bool "CAN bus is CANFD for VESC 2"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_2
+
 config VESC_POLE_PAIR_2
   int "Number of Pole Pairs of motor attached to VESC 2"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 2.
 
@@ -132,7 +182,7 @@ config VESC_CAN_ID_2
   int "ID of VESC 2"
   default 2
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 2.
 
@@ -140,7 +190,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_2
   int "Actuator velocity index for VESC 2"
   default 2
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 2.
 
@@ -152,6 +202,7 @@ config VESC_STATUS_BITMASK_2
   help
     bitmask for VESC CAN 2 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -161,11 +212,27 @@ if VESC_ACTUATORS_NUMBER > 3
 
 menu "VESC_CAN_3"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_3
+  string "CAN bus device alias for VESC 3"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 3.
+
+config VESC_CAN_BUS_DEVICE_FD_3
+  bool "CAN bus is CANFD for VESC 3"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_3
+
 config VESC_POLE_PAIR_3
   int "Number of Pole Pairs of motor attached to VESC 3"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 3.
 
@@ -173,7 +240,7 @@ config VESC_CAN_ID_2
   int "ID of VESC 3"
   default 3
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 3.
 
@@ -181,7 +248,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_3
   int "Actuator velocity index for VESC 3"
   default 3
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 3.
 
@@ -193,6 +260,7 @@ config VESC_STATUS_BITMASK_3
   help
     bitmask for VESC CAN 3 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -202,11 +270,27 @@ if VESC_ACTUATORS_NUMBER > 4
 
 menu "VESC_CAN_4"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_4
+  string "CAN bus device alias for VESC 4"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 4.
+
+config VESC_CAN_BUS_DEVICE_FD_4
+  bool "CAN bus is CANFD for VESC 4"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_4
+
 config VESC_POLE_PAIR_4
   int "Number of Pole Pairs of motor attached to VESC 4"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 4.
 
@@ -214,7 +298,7 @@ config VESC_CAN_ID_4
   int "ID of VESC 4"
   default 4
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 4.
 
@@ -222,7 +306,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_4
   int "Actuator velocity index for VESC 4"
   default 4
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 4.
 
@@ -234,6 +318,7 @@ config VESC_STATUS_BITMASK_4
   help
     bitmask for VESC CAN 4 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -243,11 +328,27 @@ if VESC_ACTUATORS_NUMBER > 5
 
 menu "VESC_CAN_5"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_5
+  string "CAN bus device alias for VESC 5"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 5.
+
+config VESC_CAN_BUS_DEVICE_FD_5
+  bool "CAN bus is CANFD for VESC 5"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_5
+
 config VESC_POLE_PAIR_5
   int "Number of Pole Pairs of motor attached to VESC 5"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 5.
 
@@ -255,7 +356,7 @@ config VESC_CAN_ID_5
   int "ID of VESC 5"
   default 5
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 5.
 
@@ -263,7 +364,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_5
   int "Actuator velocity index for VESC 5"
   default 5
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 5.
 
@@ -275,6 +376,7 @@ config VESC_STATUS_BITMASK_5
   help
     bitmask for VESC CAN 5 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -284,11 +386,27 @@ if VESC_ACTUATORS_NUMBER > 6
 
 menu "VESC_CAN_6"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_6
+  string "CAN bus device alias for VESC 6"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 6.
+
+config VESC_CAN_BUS_DEVICE_FD_6
+  bool "CAN bus is CANFD for VESC 6"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_6
+
 config VESC_POLE_PAIR_6
   int "Number of Pole Pairs of motor attached to VESC 6"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 6.
 
@@ -296,7 +414,7 @@ config VESC_CAN_ID_6
   int "ID of VESC 6"
   default 6
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 6.
 
@@ -304,7 +422,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_6
   int "Actuator velocity index for VESC 6"
   default 6
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 6.
 
@@ -316,6 +434,7 @@ config VESC_STATUS_BITMASK_6
   help
     bitmask for VESC CAN 6 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
@@ -325,11 +444,27 @@ if VESC_ACTUATORS_NUMBER > 7
 
 menu "VESC_CAN_7"
 
+config VESC_CAN_BUS_DEVICE_ALIAS_7
+  string "CAN bus device alias for VESC 7"
+  default "can0"
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  help
+    CAN bus device alias name that connects to VESC 7.
+
+config VESC_CAN_BUS_DEVICE_FD_7
+  bool "CAN bus is CANFD for VESC 7"
+  default n
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
+  depends on CAN_FD_MODE
+  help
+    This option sets the CAN bus to use CANFD for 
+    device bus alias VESC_CAN_BUS_DEVICE_ALIAS_7
+
 config VESC_POLE_PAIR_7
   int "Number of Pole Pairs of motor attached to VESC 7"
   default 14
   range 1 128
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     Number of Pole Pairs of motor attached to VESC 7.
 
@@ -337,7 +472,7 @@ config VESC_CAN_ID_7
   int "ID of VESC 7"
   default 7
   range 0 255
-  depends on VESC_CAN_ACTUATOR || VESC_CAN_STATUS
+  depends on ACTUATOR_VESC_CAN || VESC_CAN_STATUS
   help
     ID assigned to VESC 7.
 
@@ -345,7 +480,7 @@ config VESC_ACTUATOR_VELOCITY_INDEX_7
   int "Actuator velocity index for VESC 7"
   default 7
   range 0 15
-  depends on VESC_CAN_ACTUATOR
+  depends on ACTUATOR_VESC_CAN
   help
     Actuator velocity index for VESC 7.
 
@@ -357,6 +492,7 @@ config VESC_STATUS_BITMASK_7
   help
     bitmask for VESC CAN 7 status messages [ STAT6 STAT5 STAT4 STAT3 STAT2 STAT1 ]
     IE setting status message 4 and 1 would be 0b001001 = 9
+    If no status desired set to 0 for it to skip
 
 endmenu
 
