--- a/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
+++ b/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
@@ -1,8 +1,8 @@
-CONFIG_CEREBRI_SIM=n
-CONFIG_ACTUATOR_PWM=y
-CONFIG_ACTUATOR_PWM_NUMBER=3
-CONFIG_ACTUATOR_PWM_LINEAR_0=y
-CONFIG_ACTUATOR_PWM_LINEAR_1=y
+CONFIG_SIM_SITL=n
+CONFIG_ACTUATE_PWM=y
+CONFIG_ACTUATE_PWM_NUMBER=3
+CONFIG_ACTUATE_PWM_LINEAR_0=y
+CONFIG_ACTUATE_PWM_LINEAR_1=y
 CONFIG_PWM=y
 
 CONFIG_CAN=y
