--- a/app/mrbuggy3/boards/native_posix_64.conf
+++ b/app/mrbuggy3/boards/native_posix_64.conf
@@ -5,9 +5,9 @@ CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
 
 CONFIG_UART_NATIVE_POSIX_PORT_1_ENABLE=n
 
-CONFIG_CEREBRI_SIM=y
-CONFIG_SYNAPSE_ZBUS_ETHERNET=y
-CONFIG_SYNAPSE_ZBUS_UART=n
+CONFIG_SIM_SITL=y
+CONFIG_COMMUNICATE_SYNAPSE_ZBUS_ETHERNET=y
+CONFIG_COMMUNICATE_SYNAPSE_ZBUS_UART=n
 
 CONFIG_NEWLIB_LIBC=n
 CONFIG_EXTERNAL_LIBC=y
