Fix actuator_pwm module.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
+++ b/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
@@ -1,8 +1,23 @@
 CONFIG_SIM_SITL=n
 CONFIG_ACTUATE_PWM=y
 CONFIG_ACTUATE_PWM_NUMBER=3
+
+# steering
+CONFIG_ACTUATE_PWM_USE_POS_0=y
+CONFIG_ACTUATE_PWM_INDEX_0=0
 CONFIG_ACTUATE_PWM_LINEAR_0=y
+CONFIG_ACTUATE_PWM_LINEAR_M_0=400
+CONFIG_ACTUATE_PWM_LINEAR_M_DIV_0=1
+CONFIG_ACTUATE_PWM_LINEAR_C_0=1500
+CONFIG_ACTUATE_PWM_LINEAR_C_DIV_0=1
+
+# throttle
+CONFIG_ACTUATE_PWM_INDEX_1=0
 CONFIG_ACTUATE_PWM_LINEAR_1=y
+CONFIG_ACTUATE_PWM_LINEAR_M_1=1000
+CONFIG_ACTUATE_PWM_LINEAR_C_1=1550
+CONFIG_ACTUATE_PWM_LINEAR_C_DIV_1=1
+
 CONFIG_PWM=y
 
 CONFIG_CAN=y
