Reorganize folder for communication and sim.
Closes #45

Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/elm4/Kconfig
+++ b/app/elm4/Kconfig
@@ -5,10 +5,9 @@
 # options can be defined here or included via other application Kconfig files.
 # You can browse these options using the west targets menuconfig (terminal) or
 # guiconfig (GUI).
-menu "Cerebri"
+mainmenu "CogniPilot - Cerebri - ELM4"
 source "Kconfig.zephyr"
-endmenu
 
-module = APP
-module-str = APP
+module = CEREBRI
+module-str = CEREBRI
 source "subsys/logging/Kconfig.template.log_config"
