--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -1,4 +1,3 @@
-CONFIG_CEREBRI_APP="elm4"
 CONFIG_SHELL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
@@ -13,11 +12,12 @@ CONFIG_ZBUS_LOG_LEVEL_INF=y
 CONFIG_ZBUS_CHANNEL_NAME=y
 CONFIG_ZBUS_OBSERVER_NAME=y
 
-CONFIG_COMMUNICATE_SYNAPSE=y
-CONFIG_COMMUNICATE_SYNAPSE_ZBUS_UART=y
-CONFIG_COMMUNICATE_SYNAPSE_ZBUS_ETHERNET=y
+CONFIG_SYNAPSE_ZBUS=y
+CONFIG_SYNAPSE_UART=y
+CONFIG_SYNAPSE_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
+
 CONFIG_CONTROL_ACKERMANN=y
 
 # General config
