--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,8 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 add_subdirectory(actuate)
-add_subdirectory(communicate)
 add_subdirectory(control)
+add_subdirectory(dream)
 add_subdirectory(estimate)
 add_subdirectory(sense)
-add_subdirectory(simulate)
+add_subdirectory(synapse)
