--- a/lib/dream/Kconfig
+++ b/lib/dream/Kconfig
@@ -1,7 +1,7 @@
 # Copyright (c) 2023 CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-menu "Simulate"
+menu "Dream"
 
 rsource "sitl/Kconfig"
 
