--- a/lib/synapse/ethernet/CMakeLists.txt
+++ b/lib/synapse/ethernet/CMakeLists.txt
@@ -1,16 +1,13 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(synapse_zbus)
+zephyr_library_named(synapse_ethernet)
 
 # we need to be able to include generated header files
 zephyr_include_directories()
 
 zephyr_library_sources(
-  zbus_topic_list.c
-  uart_main.c
-  ethernet_main.c
-  channels.c
+  main.c
   )
 
-add_dependencies(synapse_zbus synapse_protobuf)
+add_dependencies(synapse_ethernet synapse_protobuf)
