Work on  canfd support.
Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
+++ b/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
@@ -18,17 +18,18 @@ CONFIG_ACTUATE_PWM_LINEAR_M_1=1000
 CONFIG_ACTUATE_PWM_LINEAR_C_1=1550
 CONFIG_ACTUATE_PWM_LINEAR_C_DIV_1=1
 
+CONFIG_SYNAPSE_CAN=y
+
 CONFIG_PWM=y
 
 CONFIG_CAN=y
 CONFIG_CAN_MAX_FILTER=5
 CONFIG_CAN_SHELL=y
 
+CONFIG_NET_DRIVERS=y
 CONFIG_NET_CANBUS=y
 
 CONFIG_NET_SOCKETS_CAN=y
-CONFIG_NET_SOCKETS_POSIX_NAMES=y
-
 CONFIG_NET_DEFAULT_IF_CANBUS_RAW=y
 
 CONFIG_CAN_LOG_LEVEL_DBG=n
