Add proto namespace to synapse msgs.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/lib/actuate/vesc_can/CMakeLists.txt
+++ b/lib/actuate/vesc_can/CMakeLists.txt
@@ -9,6 +9,7 @@ zephyr_include_directories()
 
 zephyr_library_sources(
   main.c
+  actuator_vesc_can.c
   )
 
 add_dependencies(actuator_vesc_can synapse_protobuf)
