--- a/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
+++ b/app/mrbuggy3/boards/mimxrt1062_fmurt6.conf
@@ -2,6 +2,22 @@ CONFIG_DREAM_SITL=n
 CONFIG_ACTUATE_PWM=y
 CONFIG_ACTUATE_PWM_NUMBER=3
 
+# can
+CONFIG_VESC_CAN=y
+CONFIG_ACTUATE_VESC_CAN=y
+CONFIG_VESC_CAN_NUMBER=2
+CONFIG_VESC_CAN_BUS_FD_0=y
+CONFIG_VESC_CAN_BUS_FD_1=y
+CONFIG_VESC_CAN_BUS_ALIAS_CAN_N_0=0
+CONFIG_VESC_CAN_BUS_ALIAS_CAN_N_1=0
+CONFIG_VESC_CAN_ID_0=60
+CONFIG_VESC_CAN_ID_1=61
+CONFIG_VESC_POLE_PAIR_0=7
+CONFIG_VESC_POLE_PAIR_1=7
+CONFIG_VESC_CAN_ACTUATOR_VEL_IDX_0=0
+CONFIG_VESC_CAN_ACTUATOR_VEL_IDX_0=1
+
+
 # steering
 CONFIG_ACTUATE_PWM_USE_POS_0=y
 CONFIG_ACTUATE_PWM_INDEX_0=0
@@ -18,7 +34,7 @@ CONFIG_ACTUATE_PWM_LINEAR_M_1=1000
 CONFIG_ACTUATE_PWM_LINEAR_C_1=1550
 CONFIG_ACTUATE_PWM_LINEAR_C_DIV_1=1
 
-CONFIG_SYNAPSE_CAN=y
+CONFIG_SYNAPSE_CAN=n
 
 CONFIG_PWM=y
 
