--- a/lib/actuate/vesc_can/CMakeLists.txt
+++ b/lib/actuate/vesc_can/CMakeLists.txt
@@ -1,13 +1,15 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(synapse_can)
+zephyr_library_named(actuator_vesc_can)
+
 
 # we need to be able to include generated header files
 zephyr_include_directories()
 
 zephyr_library_sources(
   main.c
+  actuator_vesc_can.c
   )
 
-add_dependencies(synapse_can synapse_protobuf)
+add_dependencies(actuator_vesc_can synapse_protobuf)
