--- a/drivers/actuate/Kconfig
+++ b/drivers/actuate/Kconfig
@@ -1,9 +1,9 @@
 # Copyright (c) 2023 CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-menu "Libraries"
+menu "Actuate"
 
-rsource "control/Kconfig"
-rsource "estimate/Kconfig"
+rsource "pwm/Kconfig"
+rsource "vesc_can/Kconfig"
 
 endmenu
