--- a/drivers/sense/Kconfig
+++ b/drivers/sense/Kconfig
@@ -1,9 +1,8 @@
 # Copyright (c) 2023 CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-menu "Libraries"
+menu "Sense"
 
-rsource "control/Kconfig"
-rsource "estimate/Kconfig"
+rsource "vesc_can_status/Kconfig"
 
 endmenu
