--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -51,6 +51,12 @@ CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
+# SNTP
+CONFIG_SNTP=y
+CONFIG_NET_CONFIG_CLOCK_SNTP_INIT=y
+CONFIG_NET_CONFIG_SNTP_INIT_SERVER="192.0.2.2"
+CONFIG_NET_CONFIG_SNTP_INIT_TIMEOUT=5000
+
 # STATS
 CONFIG_THREAD_RUNTIME_STATS=y
 CONFIG_SCHED_THREAD_USAGE=y
