--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,14 +13,14 @@ add_subdirectory(lib)
 
 install(PROGRAMS ${CMAKE_BINARY_DIR}/zephyr/zephyr.bin
 	DESTINATION bin
-	RENAME cerebri_${CONFIG_CEREBRI_APP}_${BOARD} OPTIONAL)
+	RENAME cerebri_${CONFIG_CEREBRI_APP_NAME}_${BOARD} OPTIONAL)
 
 install(PROGRAMS ${CMAKE_BINARY_DIR}/zephyr/zephyr.exe
 	DESTINATION bin
-	RENAME cerebri_${CONFIG_CEREBRI_APP}_${BOARD} OPTIONAL)
+	RENAME cerebri_${CONFIG_CEREBRI_APP_NAME}_${BOARD} OPTIONAL)
 
 
-set(CPACK_PACKAGE_NAME cerebri_${CONFIG_CEREBRI_APP})
+set(CPACK_PACKAGE_NAME cerebri_${CONFIG_CEREBRI_APP_NAME})
 set(CPACK_GENERATOR "DEB;TGZ")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS)
 set(CPACK_SYSTEM_NAME "${BOARD}")
