Sort drivers and libraries.
Closes #55

Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -2,5 +2,10 @@
 # SPDX-License-Identifier: Apache-2.0
 
 menu "Drivers"
-rsource "sensor/Kconfig"
+
+rsource "actuate/Kconfig"
+rsource "dream/Kconfig"
+rsource "sense/Kconfig"
+rsource "synapse/Kconfig"
+
 endmenu
