--- a/app/elm4/CMakeLists.txt
+++ b/app/elm4/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 3.13.1)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
-project(elm4 LANGUAGES C VERSION 0.0.1)
+project(elm4 LANGUAGES C)
 
 target_compile_options(app PRIVATE -Wall -Wextra -Werror)
 
