Rename setup.bash to setup.sh to match ROS install.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,11 @@ jobs:
           west init -l .
           west update
 
-      # this also builds the firmware
+      - name: Format Check
+        working-directory: example-application
+        run: |
+          west format -c
+
       - name: Twister Tests
         working-directory: example-application
         run: |
