Switch to native_posix_32, add app/common folder.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/common/boards/native_posix.conf
+++ b/app/common/boards/native_posix.conf
@@ -12,4 +12,9 @@ CONFIG_SYNAPSE_UART=n
 CONFIG_NEWLIB_LIBC=n
 CONFIG_EXTERNAL_LIBC=y
 CONFIG_POSIX_API=n
-CONFIG_POSIX_CLOCK=y
+CONFIG_POSIX_CLOCK=n
+
+# SNTP disabled, use sim time
+CONFIG_SNTP=n
+CONFIG_NET_CONFIG_CLOCK_SNTP_INIT=n
+CONFIG_NET_CONFIG_SNTP_INIT_SERVER=""
