--- a/app/mrbuggy3/sample.yaml
+++ b/app/mrbuggy3/sample.yaml
@@ -4,10 +4,7 @@ sample:
 common:
   build_only: true
   integration_platforms:
-    - native_posix_64
+    - native_posix
     - mimxrt1062_fmurt6
 tests:
   mrbuggy3.default: {}
-  mrbuggy3.debug:
-    extra_overlay_confs:
-      - debug.conf
