--- a/drivers/dream/sitl/CMakeLists.txt
+++ b/drivers/dream/sitl/CMakeLists.txt
@@ -6,17 +6,14 @@ zephyr_library_named(dream_sitl)
 # we need to be able to include generated header files
 zephyr_include_directories()
 
-set(SOURCE_FILES
-  main.c
-  )
-
-set_source_files_properties(${SOURCE_FILES}
+set_source_files_properties(native_main.c
 PROPERTIES COMPILE_DEFINITIONS
   "NO_POSIX_CHEATS;_BSD_SOURCE;_DEFAULT_SOURCE"
 )
 
 zephyr_library_sources(
-  ${SOURCE_FILES}
+  native_main.c
+  zephyr_main.c
   )
 
 add_dependencies(dream_sitl synapse_protobuf)
