drivers: dream: Add iekf and navsat channel.
Added NavSatFix message and IEKF stub.

Co-authored-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/estimate/Kconfig
+++ b/lib/estimate/Kconfig
@@ -1,8 +1,8 @@
 # Copyright (c) 2023 CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-menu "Estimator"
+menu "Estimate"
 
-#rsource "example/Kconfig"
+rsource "iekf/Kconfig"
 
 endmenu
