--- a/lib/estimate/CMakeLists.txt
+++ b/lib/estimate/CMakeLists.txt
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: Apache-2.0
 
-#add_subdirectory_ifdef(CONFIG_ESTIMATOR_EXAMPLE example)
+add_subdirectory_ifdef(CONFIG_ESTIMATE_IEKF iekf)
