--- a/app/common/boards/mimxrt1062_fmurt6.conf
+++ b/app/common/boards/mimxrt1062_fmurt6.conf
@@ -49,3 +49,6 @@ CONFIG_NET_DEFAULT_IF_CANBUS_RAW=y
 CONFIG_CAN_LOG_LEVEL_DBG=n
 CONFIG_CAN_FD_MODE=y
 CONFIG_SHELL_ARGC_MAX=72
+CONFIG_I2C=y
+CONFIG_SENSOR=y
+CONFIG_SENSE_INA226=y
