Add RT7 overlay for mrbuggy3
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/sample.yaml
+++ b/app/mrbuggy3/sample.yaml
@@ -6,5 +6,6 @@ common:
   integration_platforms:
     - native_posix
     - mimxrt1062_fmurt6
+    - mimxrt1170_fmurt7
 tests:
   mrbuggy3.default: {}
